--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,48 @@
 <%- include('partials/header.ejs') %>
-        <h1>Welcome to Nook's Cranny</h1>
         <h2>Villagers</h2>
-        
             <div class="row">
                 <% villagerList.forEach(function(villager){  %>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
                             <td><img class="rounded" src="<%=villager.villagerPicture%>" width="200px"/></td> <br>
                         <div class="card-body">
-                    <h4 class="card-title">
-                        <%= villager.villagerName %>
-                    </h4>
-              </div>
-           </div>
-          </div>
+                        <h4 class="card-title">
+                            <%= villager.villagerName %>
+                        </h4>
+                    </div>
+                </div>
+            </div>
         <% }) %>
             </div>
         <h2>Items</h2>
-        <h2>Reviews</h2></h2>
+            <div class="row">
+                <% productList.forEach(function(product){  %>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card h-100">
+                            <td><img class="rounded" src="<%=product.productPicture%>" width="200px"/></td> <br>
+                        <div class="card-body">
+                        <h4 class="card-title">
+                            <%= product.productName %>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        <% }) %>
+            </div>
+        <h2>Reviews</h2>
+            <div class="row">
+                <% reviewList.forEach(function(review){  %>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card h-100">
+                            <td><%=review.reviewDescription%></td> <br>
+                        <div class="card-body">
+                        <h4 class="card-title">
+                            <%= review.productName %> <br><br>
+                            <%= review.villagerName %>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        <% }) %>
     </body>
 </html>
