--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,3 +11,7 @@
     </head>
     
     <body>
+        <h1>Nook's Cranny</h1>
+        <div class="active-cyan-3 active-cyan-4 mb-4">
+            <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+        </div>
