--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,9 +9,28 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
-    
-    <body>
-        <h1>Nook's Cranny</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+          <img src="logo.jpg" alt="Logo" style="width:250px;height:75px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="active-cyan-3 active-cyan-4 mb-4">
             <input class="form-control" type="text" placeholder="Search" aria-label="Search">
         </div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    <li class="nav-item">
+                        <a class="nav-link" href= "/login" >Login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <body>
