pushing work to master

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,19 @@
 <%- include('partials/header.ejs') %>
-        <!--<h2>Villagers</h2>-->
-        <!--    <div class="row">-->
-        <!--        <% villagerList.forEach(function(villager){  %>-->
-        <!--            <div class="col-lg-4 col-md-6 mb-4">-->
-        <!--                <div class="card h-100">-->
-        <!--                    <td><img class="rounded" src="<%=villager.villagerPicture%>" width="200px"/></td> <br>-->
-        <!--                <div class="card-body">-->
-        <!--                <h4 class="card-title">-->
-        <!--                    <%= villager.villagerName %>-->
-        <!--                </h4>-->
-        <!--            </div>-->
-        <!--        </div>-->
-        <!--    </div>-->
-        <!--<% }) %>-->
-        <!--    </div>-->
+        <h2>Villagers</h2>
+            <div class="row">
+                <% villagerList.forEach(function(villager){  %>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card h-100">
+                            <td><img class="rounded" src="<%=villager.villagerPicture%>" width="200px"/></td> <br>
+                        <div class="card-body">
+                        <h4 class="card-title">
+                            <%= villager.villagerName %>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        <% }) %>
+            </div>
         <h2>Items</h2>
             <div class="row">
                 <% productList.forEach(function(product){  %>
@@ -29,20 +29,20 @@
             </div>
         <% }) %>
             </div>
-        <!--<h2>Reviews</h2>-->
-        <!--    <div class="row">-->
-        <!--        <% reviewList.forEach(function(review){  %>-->
-        <!--            <div class="col-lg-4 col-md-6 mb-4">-->
-        <!--                <div class="card h-100">-->
-        <!--                    <td><%=review.reviewDescription%></td> <br>-->
-        <!--                <div class="card-body">-->
-        <!--                <h4 class="card-title">-->
-        <!--                    <%= review.productName %> <br><br>-->
-        <!--                    <%= review.villagerName %>-->
-        <!--                </h4>-->
-        <!--            </div>-->
-        <!--        </div>-->
-        <!--    </div>-->
-        <!--<% }) %>-->
+        <h2>Reviews</h2>
+            <div class="row">
+                <% reviewList.forEach(function(review){  %>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card h-100">
+                            <td><%=review.reviewDescription%></td> <br>
+                        <div class="card-body">
+                        <h4 class="card-title">
+                            <%= review.productName %> <br><br>
+                            <%= review.villagerName %>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        <% }) %>
     </body>
 </html>
