--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         <!--    </div>-->
         <!--<% }) %>-->
         <!--    </div>-->
-        <h2>Items</h2>
+        <h2 class ="talk">Please have a look around! <a>...around</a></h2>
             <div class="row">
                 <% productList.forEach(function(product){  %>
                     <div class="col-lg-4 col-md-6 mb-4">
