--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,8 +9,8 @@
 <body>
     <div class="sidenav">
          <div class="login-main-text">
-            <h2>Application<br> Login Page</h2>
-            <p>Login or register from here to access.</p>
+            <img src="img/nooksDesk.png"/>
+            <p>Please log in or register to access <a>...access</a></p>
          </div>
       </div>
       <div class="main">
