--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@ body {
 
 .sidenav {
     height: 100%;
-    background-color: #000;
+    background-color: #72edd3;
     overflow-x: hidden;
     padding-top: 20px;
 }
@@ -72,4 +72,26 @@ body {
 .btn-black{
     background-color: #000 !important;
     color: #fff;
+}
+
+.container {
+    background-color: #abffed !important;
+}
+
+#first {
+    background-color: #abffed !important;
+}
+
+.talk a {
+    font-size: 70%;
+}
+
+.img1 {
+    background-image: url("img/nooksDesk.png") !important;
+    text-align: center;
+    
+}
+
+.login-main-text a {
+    font-size: 70%;
 }
