--- a/views/productAdd.ejs
+++ b/views/productAdd.ejs
@@ -42,10 +42,11 @@
         			<div class='col-sm-4'></div>
         		</div>
         	</form>
-               <a class='btn btn-danger' href='/'> Cancel </a>
+               <a class='btn btn-danger' href='/adminPage'> Cancel </a>
                <!--<a class='btn btn-secondary' href='/registerPage'> Register </a>-->
                
             </div>
          </div>
       </div>
 </body>
+</html>
