--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,6 +5,7 @@
                 <% productList.forEach(function(product){  %>
                     <li>
                         <%=product.productName%></br>
+                        <td>  <a href='product/<%=product.productId%>'>Info</a> | <a href='/product/<%=product.productId%>/edit'>Edit</a> | <a href='/product/<%=product.productId%>/delete'>Delete</a>
                         
                     </li>
                 <% }) %>
@@ -18,5 +19,4 @@
             
     </body>
 </html>
-            
             
