Fixed Search Functionality

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -11,7 +11,7 @@
                 </h4>
                 <h5>
                   Bells:<%= product.productPrice %> <br>
-                  Reviews: <br><br>
+                  Reviews: <br>
                   <h2><%= product.reviewDescription %></h2>
                   By: <%= product.villagerName %>
                 </h5>
