--- a/views/productInfo.ejs
+++ b/views/productInfo.ejs
@@ -1,3 +1,4 @@
+<!--Originally was able to view product info in Admin but got rid of the functionallity near the end-->
 <%- include('partials/header.ejs') %>
 
 <!--(productId, productName, productPicture, productDescription, productType, productPrice)-->
