--- a/views/productEdit.ejs
+++ b/views/productEdit.ejs
@@ -1,9 +1,14 @@
 <%- include('partials/header.ejs') %>
-    <div class="main">
-         <div class="col-md-6 col-sm-12">
-            <div class="login-form">
 
-               <form action='/product/<%=product.productId%>?_method=PUT' method='POST'>
+
+    <div class='container'>
+    	<div class='jumbotron '>
+    		<h3>Info for: <%=product.productName%> </h3>
+    	</div>
+    	
+         <div class="col-sm-6 col-md-12">
+            <!--<div class="login-form">-->
+               <form action='/productUpdate/<%=product.productId%>?_method=PUT' method='POST'>
                    <!--method='POST'-->
                    
                 <div class='form-group row'>
@@ -43,11 +48,11 @@
         			</div>
         		</div>
         		<div class='form-group row'>
-        		    <div class='col-sm-4'>
+        		    <div class='col-sm-2'>
 				        <button class='btn btn-primary btn-block'>Update Product</button><br>
 			        </div>
 			        <br>
-			        <div class='col-sm-4'>
+			        <div class='col-sm-2'>
 			            <a class='btn btn-danger btn-block' href='/adminPage'>Cancel</a>
 			        </div>
 		    	    
@@ -57,7 +62,7 @@
                <!--<a class='btn btn-danger' href='/adminPage'> Cancel </a>-->
                <!--<a class='btn btn-secondary' href='/registerPage'> Register </a>-->
                
-            </div>
+            <!--</div>-->
          </div>
       </div>
 </body>
