--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
         <div class="active-cyan-3 active-cyan-4 mb-4">
             <form class="text-center" action="/results">
                 <input class="form-control" type="text" placeholder="Search" aria-label="Search" name="keyword">
-                <button class="btn btn-primary"> Search! </button>
+                <!--<button class="btn btn-primary"> Search! </button>-->
             </form>
         </div>
             <div class="collapse navbar-collapse" id="navbarResponsive">
