really minor tweak: fixed login button alignmnet and changed admin logout button

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -14,7 +14,7 @@
             
             
             <a class='btn btn-outline-primary' href='/addproductPage'> Add Product </a><br>
-            <a class='btn btn-danger' href='/'> Cancel </a>
+            <a class='btn btn-danger' href='/'> Logout </a>
             
             
             
