--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
       </div>
       <div class="main">
          <div class="col-md-6 col-sm-12">
-            <div class="loginFunctionForm">
+            <div class="login-form">
                <form action='/loginFunction' method='POST'>
               		<div class='form-group row'>
               			<label for='villagerUserName' class='col-sm-4 col-form-label'>User Name</label>
@@ -35,14 +35,13 @@
               		<div class='form-group row'>
               			<div class='col-sm-4'></div>
               			<div class='col-sm-4'>
-              				<button class='btn btn-primary btn-block'>Log In</button>
               			</div>
               			<div class='col-sm-4'></div>
+              			<button class='btn btn-primary'>Log In</button>
+              				<a class='btn btn-danger' href='/'> Cancel </a>
+                            <a class='btn btn-secondary' href='/registerPage'> Register </a>
               		</div>
         	      </form>
-               <a class='btn btn-danger' href='/'> Cancel </a>
-               <a class='btn btn-secondary' href='/registerPage'> Register </a>
-               
             </div>
          </div>
       </div>
