--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
                             <td><img class="rounded" src="<%=product.productPicture%>" width="200px"/></td> <br>
                         <div class="card-body">
                         <h4 class="card-title">
-                            <%= product.productName %>
+                            <a href='product/<%=product.productId%>'> <%= product.productName %> </a>
                         </h4>
                     </div>
                 </div>
