--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
       </div>
       <div class="main">
          <div class="col-md-6 col-sm-12">
-            <div class="login-form">
+            <div class="login-form-2">
                <form action='/loginFunction' method='POST'>
               		<div class='form-group row'>
               			<label for='villagerUserName' class='col-sm-4 col-form-label'>User Name</label>
