--- a/views/productInfo.ejs
+++ b/views/productInfo.ejs
@@ -14,11 +14,11 @@
         else{%>
             <img class='col-sm-4 portrait' src=<%=product.productPicture%> />
             <div class='col-sm-4 info'>
-             <h3><%=product.productName%><br>
+             <h3><%=product.productName%><br><br>
              <div class='bio'>Description: <%=product.productDescription%></div><br>
              <div> Type: <%=product.productType%></div><br>
              <div> Price: <%=product.productPrice%></div><br><br><br>
-             <a class='btn btn-primary' href='/adminPage'>Back To Admin</a>
+             <!--<a class='btn btn-primary' href='/adminPage'>Back To Admin</a>-->
             </div>
         <%}%>
     </div>
