--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <head>
         <title> Nooks Cranny </title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel = "stylesheet" href="css/styles.css">
+        <link rel = "stylesheet" href="/css/styles.css">
         <link rel = "stylesheet" href="js/functions.js">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -11,7 +11,7 @@
     <nav id="first" class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-          <img src="img/Nooks.png" alt="Nooklings" style="width:200px;height:134px;">
+          <img src="/img/Nooks.png" alt="Nooklings" style="width:200px;height:134px;">
 
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,11 +26,11 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Home
+                                                <a class="btn btn-outline-primary" href="/">Home
                             <span class="sr-only">(current)</span>
                         </a>
                     <li class="nav-item">
-                        <a class="nav-link" href= "/login" >Login</a>
+                        <a class="btn btn-outline-dark" href= "/login" >Login</a>
                     </li>
                 </ul>
             </div>
